# drone_detection_rf_2026

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/drone classification data/: process_datasets.ipynb
data/drone classification data/drone_dataset_npz/: airid_0.npz  airid_1.npz  airid_10.npz  airid_100.npz  airid_1000.npz  airid_1001.npz  airid_1002.npz  airid_1003.npz  airid_1004.npz  airid_1005.npz  airid_1006.npz  airid_1007.npz  airid_1008.npz  airid_1009.npz  airid_101.npz  airid_1010.npz  airid_1011.npz  airid_1012.npz  airid_1013.npz  airid_1014.npz  airid_1015.npz  airid_1016.npz  airid_1017.npz  airid_1018.npz  airid_1019.npz  airid_102.npz  airid_1020.npz  airid_1021.npz  airid_1022.npz  airid_1023.npz  airid_1024.npz  airid_1025.npz  airid_1026.npz  (+11639 more)
docs/: README.md  architecture.md
docs/TDoA_simulation_with_map/: README.md  main.py
docs/localization/: tdoa_sim_ver01.ipynb
docs/notebooks/: gcc_tdoa_iq.ipynb  gcc_test.ipynb  hyp_sim.ipynb  signal_gen_real.ipynb  tdoa_sim_ver01.ipynb
localization/: __init__.py  core.py
scripts/: deploy_hardware.py  run_tdoa_sim.py  setup_venv.sh  train_model.py
simulation/: __init__.py  live_map.py  scenarios.py  tdoa_sim.py  utils.py
src/: __init__.py
src/core/: __init__.py  gcc.py  iq_handler.py  tdoa.py  utils.py
src/hardware/: __init__.py  receive.py  send.py  spectra.py
src/models/: __init__.py  classification.ipynb  exploration.ipynb
tdoa/: __init__.py  core.py  simulation.py  utils.py
tests/: __init__.py  test_core.py
utils/: __init__.py  tdoa_utils.py
(+12659 files in other folders)
